# mashinky-calculator

./: .envrc  .gitignore  LICENSE  README.md  pyproject.toml
mashinky/: __main__.py  commands.py  console.py  engines.py  models.py  palette.py  paths.py  repl.py  shell.py  state.py  style.py  trains.py  types.py  wagons.py
mashinky/ext/: sqlalchemy.py
mashinky/extract/: __main__.py  config.py  factory.py  images.py  models.py  reader.py
mashinky/models/: base.py  config.py  trains.py
mashinky/server/: __init__.py  __main__.py  app.py  trains.py
mashinky/server/templates/: _base.html.j2  _macros.html.j2  _macros_wagon_type.html.j2  base.html.j2  cargo_types.html.j2  colors.html.j2  data.html.j2  home.html.j2  token_types.html.j2  trains.html.j2  wagon_types.html.j2  wagon_types.j2
mashinky/server/templates/macros/: common.html.j2  engine.html.j2  train.html.j2  wagon_type.html.j2
mashinky/server/trains/: generate.py  models.py  options.py  suggestions.py
mashinky/tests/: test_types.py
mashinky/tests/extract/: test_models.py
static/: style.css
