[tool.poetry]
name = "mashinky-calculator"
version = "0.1.0"
description = ""
authors = ["Sam Clements"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wcwidth = "^0.2.5"
tabulate = "^0.8.7"
Pint = "^0.16.1"
inflect = "^5.0.2"
click-shell = "^2.0"
click = "^7.1.2"
xdg = "^5.1.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
types-tabulate = "*"
types-click = "*"
pytest = "*"
mypy = "*"
black = "*"

[tool.poetry.scripts]
mashinky = 'mashinky.shell:main'

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
